@@ -7,14 +7,15 @@ import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import com.icthh.xm.commons.domain.DefinitionSpec;
 import com.icthh.xm.commons.domain.FormSpec;
 import com.icthh.xm.commons.listener.JsonListenerService;
-import com.icthh.xm.ms.entity.AbstractUnitTest;
+import com.icthh.xm.ms.entity.AbstractJupiterUnitTest;
 import com.icthh.xm.ms.entity.domain.spec.TypeSpec;
 import com.icthh.xm.ms.entity.domain.spec.XmEntitySpec;
 import lombok.SneakyThrows;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.List;
 import java.util.Map;
@@ -22,28 +23,26 @@ import java.util.Map;
 import static com.icthh.xm.ms.entity.service.json.JsonConfigurationListener.XM_ENTITY_SPEC_KEY;
 import static com.icthh.xm.ms.entity.web.rest.XmEntitySaveIntTest.loadFile;
 import static java.util.Collections.singletonList;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-@RunWith(MockitoJUnitRunner.class)
-public class XmEntityDataFormSpecProcessorUnitTest extends AbstractUnitTest {
+@ExtendWith(MockitoExtension.class)
+public class XmEntityDataFormSpecProcessorUnitTest extends AbstractJupiterUnitTest {
     private static final String TENANT = "XM";
     private static final String RELATIVE_PATH_TO_FILE = "xmentityspec/forms/specification-forms.json";
     private XmEntityDataFormSpecProcessor subject;
-    private ObjectMapper objectMapper;
     private JsonListenerService jsonListenerService;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         jsonListenerService = new JsonListenerService();
         subject = new XmEntityDataFormSpecProcessor(jsonListenerService);
-        objectMapper = new ObjectMapper();
     }
 
     @Test
     public void shouldProcessTypeSpecWithSingleReferences() throws Exception {
         XmEntitySpec inputXmEntitySpec = loadXmEntitySpecByFileName("xmentityspec-forms-input");
         XmEntitySpec expectedXmEntitySpec = loadXmEntitySpecByFileName("xmentityspec-forms-input-expected");
-        TypeSpec typeSpec = inputXmEntitySpec.getTypes().get(0);
+        TypeSpec typeSpec = inputXmEntitySpec.getTypes().getFirst();
         jsonListenerService.processTenantSpecification(TENANT, RELATIVE_PATH_TO_FILE, loadFile("config/specs/forms/specification-forms.json"));
 
         subject.fullUpdateStateByTenant(TENANT, XM_ENTITY_SPEC_KEY, inputXmEntitySpec.getForms());
@@ -59,20 +58,20 @@ public class XmEntityDataFormSpecProcessorUnitTest extends AbstractUnitTest {
     @Test
     public void shouldNotProcessTypeSpecIfPossibleRecursion() throws Exception {
         XmEntitySpec inputXmEntitySpec = loadXmEntitySpecByFileName("xmentityspec-forms-recursive");
-        TypeSpec typeSpec = inputXmEntitySpec.getTypes().get(0);
+        TypeSpec typeSpec = inputXmEntitySpec.getTypes().getFirst();
         jsonListenerService.processTenantSpecification(TENANT, RELATIVE_PATH_TO_FILE, loadFile("config/specs/forms/specification-forms.json"));
 
         subject.fullUpdateStateByTenant(TENANT, XM_ENTITY_SPEC_KEY, inputXmEntitySpec.getForms());
         subject.processDataSpec(TENANT, XM_ENTITY_SPEC_KEY, typeSpec::setDataForm, typeSpec::getDataForm);
 
-        assertEquals(inputXmEntitySpec.getTypes().get(0).getDataForm(), typeSpec.getDataForm());
+        Assertions.assertEquals(inputXmEntitySpec.getTypes().getFirst().getDataForm(), typeSpec.getDataForm());
     }
 
     @Test
     public void shouldProcessTypeSpecWithMultipleForms() throws Exception {
         XmEntitySpec inputXmEntitySpec = loadXmEntitySpecByFileName("xmentityspec-forms-multiple");
         XmEntitySpec expectedXmEntitySpec = loadXmEntitySpecByFileName("xmentityspec-forms-multiple-expected");
-        TypeSpec typeSpec = inputXmEntitySpec.getTypes().get(0);
+        TypeSpec typeSpec = inputXmEntitySpec.getTypes().getFirst();
         jsonListenerService.processTenantSpecification(TENANT, RELATIVE_PATH_TO_FILE, loadFile("config/specs/forms/specification-forms.json"));
 
         subject.fullUpdateStateByTenant(TENANT, XM_ENTITY_SPEC_KEY, inputXmEntitySpec.getForms());
@@ -85,14 +84,16 @@ public class XmEntityDataFormSpecProcessorUnitTest extends AbstractUnitTest {
         assertEqualsEntities(expectedXmEntitySpec, actualXmEntitySpec);
     }
 
-    @Test(expected = JsonProcessingException.class)
-    public void shouldThrowIllegalArgumentExceptionWhenProcessTypeSpecWithNotValidJson()throws JsonProcessingException {
-        XmEntitySpec inputXmEntitySpec = loadXmEntitySpecByFileName("xmentityspec-forms-input");
-        TypeSpec typeSpec = inputXmEntitySpec.getTypes().get(0);
-        jsonListenerService.processTenantSpecification(TENANT, RELATIVE_PATH_TO_FILE, "{,}");
+    @Test
+    public void shouldThrowIllegalArgumentExceptionWhenProcessTypeSpecWithNotValidJson() {
+        assertThrows(JsonProcessingException.class, () -> {
+            XmEntitySpec inputXmEntitySpec = loadXmEntitySpecByFileName("xmentityspec-forms-input");
+            TypeSpec typeSpec = inputXmEntitySpec.getTypes().getFirst();
+            jsonListenerService.processTenantSpecification(TENANT, RELATIVE_PATH_TO_FILE, "{,}");
 
-        subject.fullUpdateStateByTenant(TENANT, XM_ENTITY_SPEC_KEY, inputXmEntitySpec.getForms());
-        subject.processDataSpec(TENANT, XM_ENTITY_SPEC_KEY, typeSpec::setDataForm, typeSpec::getDataForm);
+            subject.fullUpdateStateByTenant(TENANT, XM_ENTITY_SPEC_KEY, inputXmEntitySpec.getForms());
+            subject.processDataSpec(TENANT, XM_ENTITY_SPEC_KEY, typeSpec::setDataForm, typeSpec::getDataForm);
+        });
     }
 
     @SneakyThrows
@@ -104,16 +105,16 @@ public class XmEntityDataFormSpecProcessorUnitTest extends AbstractUnitTest {
     @SneakyThrows
     private void assertEqualsEntities(XmEntitySpec expected, XmEntitySpec actual) {
         ObjectMapper objectMapper = new ObjectMapper(new YAMLFactory());
-        TypeSpec expectedTypeSpec = expected.getTypes().get(0);
-        TypeSpec actualTypeSpec = actual.getTypes().get(0);
+        TypeSpec expectedTypeSpec = expected.getTypes().getFirst();
+        TypeSpec actualTypeSpec = actual.getTypes().getFirst();
         Map<?, ?> expectedForm = objectMapper.readValue(expectedTypeSpec.getDataForm(), Map.class);
         Map<?, ?> actualForm = objectMapper.readValue(actualTypeSpec.getDataForm(), Map.class);
 
         ObjectWriter prettyPrinter = new ObjectMapper().writerWithDefaultPrettyPrinter();
-        assertEquals(prettyPrinter.writeValueAsString(expectedForm), prettyPrinter.writeValueAsString(actualForm));
-        assertEquals(expectedTypeSpec.getKey(), actualTypeSpec.getKey());
-        assertEquals(expected.getDefinitions(), actual.getDefinitions());
-        assertEquals(expected.getForms(), actual.getForms());
+        Assertions.assertEquals(prettyPrinter.writeValueAsString(expectedForm), prettyPrinter.writeValueAsString(actualForm));
+        Assertions.assertEquals(expectedTypeSpec.getKey(), actualTypeSpec.getKey());
+        Assertions.assertEquals(expected.getDefinitions(), actual.getDefinitions());
+        Assertions.assertEquals(expected.getForms(), actual.getForms());
     }
 
     private XmEntitySpec createXmEntitySpec(List<TypeSpec> typeSpecs,
